--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,4 +14,6 @@
 
     <% }) %>
 
+    <button type="button" href="/compose" name="button">Add Post</button>
+
 <%- include("partials/footer"); -%>
