--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,6 +14,7 @@
 
     <% }) %>
 
-    <button type="button" href="/compose" name="button">Add Post</button>
+       <button type="button"  name="button"> <a href="href="/compose"">Add Post</a> </button>
+
 
 <%- include("partials/footer"); -%>
