Updated home button

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
 
     <% }) %>
 
-       <button type="button"  name="button"> <a href="href="/compose"">Add Post</a> </button>
+       <button type="button"  name="button"> <a href="/compose">Add Post</a> </button>
 
 
 <%- include("partials/footer"); -%>
